--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <div class="container calendar">
       <!-- TODO: Timeblocks go here -->
     </div>
-
+    <!-- $(document).read(function()) -->
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.25.0/luxon.min.js"></script>
-    <script src="scipt.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
